--- a/package.json
+++ b/package.json
@@ -8,6 +8,9 @@
     "dev": "concurrently \"pnpm run next-dev\" \"pnpm run fastapi-dev\""
   },
   "dependencies": {
+    "@fortawesome/free-brands-svg-icons": "^6.4.2",
+    "@fortawesome/free-solid-svg-icons": "^6.4.2",
+    "@fortawesome/react-fontawesome": "^0.2.0",
     "concurrently": "^8.2.2",
     "next": "13.5.6",
     "react": "^18",
